<resources>
    <string name="app_name">FullConcentration3</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_home">메인 화면</string>
    <string name="menu_textedit">확언 설정</string>
    <string name="menu_alarm">시간 설정</string>
    <string name="menu_app_allowed">허용앱 설정</string>
    <string name="menu_preview">화면 미리보기</string>
    <string name="menu_btn_fire">집중</string>

    <string name="dialog_title">오늘의 확언</string>

</resources>